--- a/1/bioghraphy.html
+++ b/1/bioghraphy.html
@@ -1,1 +1,38 @@
+                                             Автобіографія Іщук Борис
+Назад на головну
+    Зміст
+Базова Інформація
+Іщук Борис , 19 років
+Навчаюсь в ПНУ ім. В. Стефаника
+Живу в м. Івано-Франківськ
+Поступив на факультет математики і інформатики
+Навчався в коледжі
+Родом з Яремче
+до змісту
 
+Дитинство
+Моє дитинство пройшло у мальовничому місті Яремче. З раннього віку мене приваблювали різні творчі заняття: я часто малював та складав маленькі історії.  
+Також мені подобалося слухати музику та вчитися новим речам, наприклад, іноземним мовам. Багато часу я проводив з друзями на природі, досліджуючи ліс та гори.  
+У цілому, дитинство було сповнене радісних пригод і веселих моментів.  
+
+Шкільні роки
+Я навчався у школі N1 в Яремче. Протягом навчання завжди старався отримувати високі оцінки та цікавився різними предметами, особливо математикою. Брав участь у багатьох шкільних заходах та проектах.Завжди прагнув розвивати себе та відкривати нові горизонти. 
+до змісту
+
+Поза школою
+    Поза школою я активно займався різними гуртками.  
+    Відвідував музичну школу, де вчився грати на гітарі.  
+    Брав участь у місцевих концертах і фестивалях, що дозволяло мені розвивати свої творчі здібності.  
+    Також займався волонтерською діяльністю, допомагав організовувати заходи для дітей.  
+    Люблю мандрувати Україною та відкривати для себе нові міста та культуру.  
+до змісту
+
+Університет
+ Зараз я навчаюсь у Прикарпатському національному університеті ім. Василя Стефаника.  
+    Обрав спеціальність "Комп'ютерні науки", бо завжди захоплювався інформаційними технологіями.  
+    Моє навчання проходить у групі КН 22.  
+    Я мрію стати кваліфікованим програмістом і працювати над сучасними технологіями.  
+    В університеті беру активну участь у студентському житті та цікавлюсь науковими дослідженнями.  
+ до змісту
+ 
+ Уверх
