--- a/1/friends.html
+++ b/1/friends.html
@@ -1,1 +1,9 @@
-
+Друзі
+Іщука Бориса
+Назад на головну
+                                        Мої друзі
+Прізвище  Ім'я         Дата народження         Адреса проживання                   Контактний телефон
+Семенюк   Олександр     12.05.2003      Грушевського 22 м. Львів                0974561234
+Тимошенко Ірина         01.03.2004      Січових Стрільців 10 м. Чернівці       0506782345
+Мельник   Дмитро        17.09.2001      Проспект Перемоги 88 м. Київ           0737894561
+Кузьменко Анастасія     22.11.2002      Володимира Великого 11 м. Харків       0991237654
