--- a/2/bioghraphy.html
+++ b/2/bioghraphy.html
@@ -1,1 +1,69 @@
+<!DOCTYPE html>
+<html lang="uk">
+    <head>
+        <meta charset="utf-8">
+        <title>Біографія Іщук Борис </title>
+    </head>
+    <body> 
+        <h1 id="autobiography">Автобіографія</h1>
 
+        <a href="./index.html">Назад на головну</a> 
+
+        <h3 id="heading">Зміст</h3> 
+        <a href="#basic_information">Базова інформація</a><br>
+        <a href="#childhood">Дитинство</a><br>
+        <a href="#school_years">Шкільні роки</a><br>
+        <a href="#after_school">Поза школою</a><br>
+        <a href="#university">Університет</a><br>
+
+
+        <article>
+            <h2 id="basic_information">Базова Інформація</h2> 
+            <p>Іщук Борис , 19 років
+Навчаюсь в ПНУ ім. В. Стефаника
+Живу в м. Івано-Франківськ
+Поступив на факультет математики і інформатики
+Навчався в коледжі
+Родом з Яремче
+            </p>
+        </article>
+        <a href="#heading">до змісту</a>
+
+        <h2 id="childhood">Дитинство</h2>
+        <p>Моє дитинство пройшло у мальовничому місті Яремче. З раннього віку мене приваблювали різні творчі заняття: я часто малював та складав маленькі історії.  
+Також мені подобалося слухати музику та вчитися новим речам, наприклад, іноземним мовам. Багато часу я проводив з друзями на природі, досліджуючи ліс та гори.  
+У цілому, дитинство було сповнене радісних пригод і веселих моментів.  
+        </p>
+        <article>
+            <a href="#heading">до змісту</a>
+            <h2 id="school_years">Шкільні роки</h2>
+            <p>Я навчався у школі N1 в Яремче. Протягом навчання завжди старався отримувати високі оцінки та цікавився різними предметами, особливо математикою. Брав участь у багатьох шкільних заходах та проектах.Завжди прагнув розвивати себе та відкривати нові горизонти. 
+            </p>
+        </article>
+        <a href="#heading">до змісту</a>
+
+        <article> 
+            <h2 id="after_school">Поза школою</h2> 
+            <p>Поза школою я активно займався різними гуртками.  
+    Відвідував музичну школу, де вчився грати на гітарі.  
+    Брав участь у місцевих концертах і фестивалях, що дозволяло мені розвивати свої творчі здібності.  
+    Також займався волонтерською діяльністю, допомагав організовувати заходи для дітей.  
+    Люблю мандрувати Україною та відкривати для себе нові міста та культуру.
+            </p>
+        </article>
+        <a href="#heading">до змісту</a>
+
+        <article>
+            <h2 id="university">Університет</h2>
+            <p>Зараз я навчаюсь у Прикарпатському національному університеті ім. Василя Стефаника.  
+    Обрав спеціальність "Комп'ютерні науки", бо завжди захоплювався інформаційними технологіями.  
+    Моє навчання проходить у групі КН 22.  
+    Я мрію стати кваліфікованим програмістом і працювати над сучасними технологіями.  
+    В університеті беру активну участь у студентському житті та цікавлюсь науковими дослідженнями.  
+            </p>
+        </article>
+        <a href="#heading">до змісту</a>
+        <hr>
+        <a href="#autobiography">Уверх</a>
+    </body>
+</html>
