--- a/2/friends.html
+++ b/2/friends.html
@@ -1,9 +1,51 @@
-Друзі
-Іщука Бориса
-Назад на головну
-                                        Мої друзі
-Прізвище  Ім'я         Дата народження         Адреса проживання                   Контактний телефон
-Семенюк   Олександр     12.05.2003      Грушевського 22 м. Львів                0974561234
-Тимошенко Ірина         01.03.2004      Січових Стрільців 10 м. Чернівці       0506782345
-Мельник   Дмитро        17.09.2001      Проспект Перемоги 88 м. Київ           0737894561
-Кузьменко Анастасія     22.11.2002      Володимира Великого 11 м. Харків       0991237654
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="utf-8">
+    <title>Друзі Іщука Бориса</title>
+</head>
+<body>
+<h1>Друзі Іщука Бориса</h1>
+<a href="./index.html">Назад на головну</a> 
+
+<h2>Мої друзі</h2>
+
+<table>
+    <caption>Мої друзі</caption> 
+    <thead>
+        <tr>
+            <th>Прізвище Ім'я</th>
+            <th>Дата народження</th>
+            <th>Адреса проживання</th>
+            <th>Контактний телефон</th>
+        </tr>
+    </thead>                                   
+    <tbody>
+        <tr>
+            <td>Семенюк Олександр</td>
+            <td>12.05.2003</td>
+            <td>Грушевського 22 м. Львів</td>
+            <td>0974561234</td>
+        </tr>
+        <tr>
+            <td>Тимошенко Ірина</td>
+            <td>01.03.2004</td>
+            <td>Січових Стрільців 10 м. Чернівці</td>
+            <td>0506782345</td>
+        </tr>
+        <tr>
+            <td>Мельник Дмитро</td>
+            <td>17.09.2001</td>
+            <td>Проспект Перемоги 88 м. Київ</td>
+            <td>0737894561</td>
+        </tr>
+        <tr>
+            <td>Кузьменко Анастасія</td>
+            <td>22.11.2002</td>
+            <td>Володимира Великого 11 м. Харків</td>
+            <td>0991237654</td>
+        </tr>
+    </tbody>
+</table>   
+</body>
+</html>
