--- a/2/index.html
+++ b/2/index.html
@@ -1,10 +1,25 @@
-Персональна сторінка 
-Іщук Борис, 19 років
+<!Doctype html>
+<html lang="uk">
+    <head>
+        <meta charset="utf-8">
+        <title>Персональна сторінка</title>
+    </head>
+    <body> 
+        <h1>Персональна сторінка</h1> 
+<p> Іщук Борис, 19 років
 Навчаюсь в ПНУ ім. В. Стефаника
 Живу в м. Івано-Франківськ
 Поступив на факультет математики і інформатики, за спеціальністю комп'ютерні науки
 Родом з Яремче
-Автобіографія
-Сьогодення
-Друзі
-Галерея
+    </p>
+    
+   <a href="bioghraphy.html"> Автобіографія </a>
+
+   <a href="nowadays.html">  Сьогодення </a>
+
+   <a href="friends.html"> Друзі </a>
+   
+   <a href="gallery.html"> Галерея</a>
+   
+</body>
+</html>
