--- a/2/nowadays.html
+++ b/2/nowadays.html
@@ -1,72 +1,86 @@
-Сьогодення 
-Іщук Борис
-Назад на головну
-Мій типовий список покупків
-Молочні продукти:
-Сметана
-Молоко
-Масло
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="utf-8">
+    <title>Сьогодення</title>
+</head>
+<body>
+    <h1>Сьогодення Прийдун Вікторія</h1>
+    <a href="./index.html">Назад на головну</a>
 
-М'ясо:
-Курятина
-Свинина
+    <h2>Мій типовий список покупок</h2>
+    <ul>
+        <li>Молочні продукти:
+            <ul>
+                <li>Сметана</li>
+                <li>Молоко</li>
+                <li>Масло</li>
+            </ul>
+        </li>
+        <li>М'ясо:
+            <ul>
+                <li>Курятина</li>
+                <li>Свинина</li>
+            </ul>
+        </li>
+        <li>Хліб</li>
+        <li>Борошно</li>
+        <li>Каші:
+            <ul>
+                <li>Гречана</li>
+                <li>Рисова</li>
+            </ul>
+        </li>
+        <li>Макарони</li>
+        <li>Картопля</li>
+        <li>Овочі:
+            <ul>
+                <li>Цибуля</li>
+                <li>Капуста</li>
+                <li>Морква</li>
+                <li>Помідори</li>
+                <li>Огірки</li>
+            </ul>
+        </li>
+        <li>Олія</li>
+        <li>Снеки</li>
+    </ul>
 
-Хліб
+    <h2>Мій улюблений десерт</h2>
+    <h2>Медовий торт</h2>
+    <ol>
+        <li>Інгредієнти для тіста:
+            <ol>
+                <li>2 чашки борошна</li>
+                <li>1 ч. ложка розпушувача тіста</li>
+                <li>1/2 чашки вершкового масла</li>
+                <li>1/2 чашки меду</li>
+            </ol>
+        </li>
+        <li>Інгредієнти для начинки:
+            <ol>
+                <li>1 чашка горішків (горіхи, лісові горішки або мигдальні горішки)</li>
+                <li>1/2 чашки меду</li>
+                <li>2 ст. ложки вершкового масла</li>
+            </ol>
+        </li>
+        <li>Приготування тіста:
+            <ol>
+                <li>Перемішати борошно та розпушувач тіста в мисці.</li>
+                <li>Додати вершкове масло та мед і замісити тісто.</li>
+            </ol>
+        </li>
+        <li>Приготування начинки:
+                <ol>
+                    <li>Горішки роздрібнити або подрібнити у блендері.</li>
+                    <li>Додати мед та вершкове масло, перемішати.</li>
 
-Борошно
+                </ol>
+            
+            
+        </li>
+        <li>Випікати в духовці протягом 20-25 хвилин при 180°C.</li>
+    </ol>
+</body>
+</html>
 
-Каші:
-Гречана
-Рисова
-
-Макарони
-
-Картопля
-
-Овочі:
-Цибуля
-Капуста
-Морква
-Помідори
-Огірки
-
-Фрукти:
-Банани
-Яблука
-Цитрусові
-
-Олія
-
-Снеки
-
-Мій улюбленийй десерт
- Медовий торт
-Інгредієнти для тіста:
-2 чашки борошна
-1 ч. ложка розпушувача тіста
-1/2 чашки вершкового масла
-1/2 чашки меду
-
-Інгредієнти для начинки:
-1 чашка горішків (горіхи, лісові горішки або мигдальні горішки)
-1/2 чашки меду
-2 ст. ложки вершкового масла
-
-Приготування тіста:
-Перемішати борошно та розпушувач тіста в мисці.
-Додати вершкове масло та мед і замісити тісто.
-
-Розкатування тіста:
-Розкатати тісто на плоскій поверхні до товщини близько 0,5 см.
-
-Приготування начинки:
-Горішки роздрібнити або подрібнити у блендері.
-Додати мед та вершкове масло, перемішати.
-
- Складання торта:
-Положити половину тіста в підходячу форму для випікання.
-Розподілити начинку з горішків.
-Покрити залишками тіста.
-
-Печіння:
-Випікати в духовці протягом 20-25 хвилин при 180°C.
