--- a/4/gallery.html
+++ b/4/gallery.html
@@ -33,7 +33,7 @@ img{
     <h3 class="imagezob">Зображення у цій папці</h3>
     <img src="./680x480.gif" alt="picture">
     <h3 class="imagezobr">Зображення у папці</h3>
-    <img src="../practise2/images/680x480.gif" alt="picture">
+    <img src="../2/images/680x480.gif" alt="picture">
     <h3 class="imagezobra">Зображення онлайн</h3>
     <a  class="online" href="https://place-hold.it/1280x1024" target="_blank">Зображення онлайн</a>
 </body>
