--- a/5/index.html
+++ b/5/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="utf-8">
+    <title>5 practise</title>
+    <link rel="stylesheet" href="./css./styles.css">
+</head>
+<body> 
+    <div class="row"> 
+ <h1 class="zagolovok">Main caption</h1>
+ 
+ 
+ <div class="col-lg-4 col-md-5 col-sm-12" id="text"><h2 class="cap">caption 1</h2>
+ <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem ullam iste praesentium dolore perferendis quaerat, quo tenetur ipsum velit exercitationem sint nisi. Nihil cum qui modi minima tempore deserunt aut!</p>  </div>
 
+
+
+
+
+ <div class="col-lg-4 col-md-5 col-sm-12" id="text"><h2 class="capt">caption 2</h2> 
+ <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem ullam iste praesentium dolore perferendis quaerat, quo tenetur ipsum velit exercitationem sint nisi. Nihil cum qui modi minima tempore deserunt aut!</p> </div>
+ 
+ <div class="col-lg-4 col-md-11" id="text"> <h2 class="caption">caption 3</h2>  
+ <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem ullam iste praesentium dolore perferendis quaerat, quo tenetur ipsum velit exercitationem sint nisi. Nihil cum qui modi minima tempore deserunt aut!</p> </div>
+
+</div>
+ 
+</body>
+</html>
