--- a/6/bioghraphy.html/bioghraphy.html
+++ b/6/bioghraphy.html/bioghraphy.html
@@ -50,7 +50,7 @@
         <article class="block col-lg-3 col-md-5">
             <div class="articlethree">
         <h2 id="school_years">Шкільні роки</h2>
-            <p class= "paragraf3">Я навчався у школі N1 в Яремче. Протягом навчання завжди старався отримувати високі оцінки та цікавився різними предметами, особливо математикою. Брав участь у багатьох шкільних заходах та проектах.Завжди прагнув розвивати себе та відкривати нові горизонти. 
+            <p class= "paragraf3">Я навчався у школі N1 в Яремче. Протягом навчання завжди старався отримувати високі оцінки та цікавився різними предметами, особливо математикою. Брав участь у багатьох шкільних заходах та проектах. 
             </p>
         
             </div>
